# DBasTable

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code-qa.yml  coverage.yml  docs.yml  python-publish.yml  unittests.yml
dbastable/: __init__.py  _column_mapping.py  _def.py  _parse_tools.py  _sanitizer.py  _sqldb.py  _viewers.py  where.py
dbastable/tests/: __init__.py  mixins.py  test_db.py  test_non_conformant_columns.py  test_sanitizer.py  test_viewers.py  test_where.py
docs/: api.rst  conf.py  general_usage.rst  index.rst  nonconformant.rst  viewer_classes.rst  where_statements.rst
